--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask==2.3.3
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.0.5
-Flask-CORS==4.0.0
-SQLAlchemy==2.0.23
-Werkzeug==2.3.7
+flask==2.3.3
+flask-login==0.6.3
+flask-sqlalchemy==3.0.5
+flask-cors==4.0.0
+sqlalchemy==2.0.23
+werkzeug==2.3.7
 groq==0.3.0
 python-dotenv==1.0.0
 qrcode[pil]==7.4.2
-Pillow==10.0.1
-python-dotenv==1.0.0
+pillow>=10.2.0
 requests==2.31.0
+gunicorn==21.2.0
