--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ flask==2.3.3
 flask-login==0.6.3
 flask-sqlalchemy==3.0.5
 flask-cors==4.0.0
-sqlalchemy==2.0.23
+sqlalchemy==2.0.28
 werkzeug==2.3.7
 groq==0.3.0
 python-dotenv==1.0.0
 qrcode[pil]==7.4.2
-pillow>=10.2.0
+pillow==10.3.0
 requests==2.31.0
 gunicorn==21.2.0
