--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-Flask==3.0.3
-gunicorn==23.0.0
-flask-cors==5.0.0
-flask-login==0.6.3
+flask==3.0.0
 flask-sqlalchemy==3.1.1
-sqlalchemy==2.0.36
+flask-login==0.6.3
+flask-cors==4.0.0
 python-dotenv==1.0.1
-groq==0.3.0
-qrcode==8.0
-pillow==11.0.0
-
-
+groq==0.9.0
+qrcode==7.4.2
+pillow==10.1.0
+werkzeug==3.0.1
+gunicorn==21.2.0
