--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-flask==3.0.0
-flask-sqlalchemy==3.1.1
-flask-login==0.6.3
-flask-cors==4.0.0
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
+Flask-Cors==4.0.0
 python-dotenv==1.0.1
 groq==0.9.0
 qrcode==7.4.2
-pillow==10.1.0
-werkzeug==3.0.1
+Pillow==10.1.0
+Werkzeug==3.0.1
 gunicorn==21.2.0
+setuptools==69.0.3
+wheel==0.42.0
