--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,7 @@ Flask-Login==0.6.3
 Flask-Cors==4.0.0
 python-dotenv==1.0.1
 groq==0.9.0
-qrcode==7.4.2
-Pillow==10.1.0
+qrcode[pil]==7.4.2
+Pillow==10.3.0
 Werkzeug==3.0.1
 gunicorn==21.2.0
-setuptools==69.0.3
-wheel==0.42.0
